--- a/file2.html
+++ b/file2.html
@@ -1,95 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Email2</title>
-</head>
-<body style="margin:0; padding:0; font-family: Arial, Helvetica, sans-serif;">
-
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:800px; background-color:#ffffff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
-  <tr>
-    <td align="left" style="padding-bottom:10px;">
-      <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="200" style="display:block;">
-    </td>
-  </tr>
-
-  <!-- Contact Info -->
-  <tr>
-    <td style="font-size:18px; color:#233e6f;">
-      <table border="0" cellpadding="4" cellspacing="0">
-        <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/gF7YFKhv/Group-1.png" width="32" alt="Office Phone"></td>
-          <td><strong>Office:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">0207 828 8253</a></td>
-        </tr>
-        <!-- <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/DgLRthwJ/Group-1-2.png" width="32" alt="Mobile"></td>
-          <td><strong>Mobile:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">123-456-7890</a></td>
-        </tr> -->
-        <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/3YCtsRbz/Frame-1.png" width="32" alt="Emergency"></td>
-          <td><strong>Emergency:</strong> <a href="tel:1234567890" style="color:#233e6f; text-decoration:none;">07831 406242</a></td>
-        </tr>
-        <tr>
-          <td valign="middle" width="40"><img src="https://i.ibb.co/cmTvh8K/Frame-2.png" width="32" alt="Website"></td>
-          <td><strong>Website:</strong> <a href="https://www.hallinans.example" style="color:#233e6f; text-decoration:none;">www.hallinans.example</a></td>
-        </tr>
-       
-         <!-- Emails -->
-        <tr>
-           <td valign="middle" width="40"><img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" width="32" alt="CJSM"></td>
-          <td style="padding-top:10px; font-weight:500; color:#233e6f;"> <strong>Secure email:</strong>
-            <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none;">areesha@hallinans.co.uk</a> | 
-            <a href="mailto:areesha@cjsm.net" style="color:#233e6f; text-decoration:none;">areesha@cjsm.net</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-
-  <!-- Social Icons -->
-   <tr>
-    <td style="color:#233e6f; font-size: 20px; font-weight: 600; padding: 10px;">Social Links</td>
-   </tr>
-  <tr>
-    
-    <td>
-      <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
-        <img src="https://i.ibb.co/0VJsQ4Ld/Frame-2.png" alt="LinkedIn" width="35" style="margin-right:6px; vertical-align:middle;">
-      </a>
-      <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
-        <img src="https://i.ibb.co/dJpd6sSH/Frame-1.png" alt="Facebook" width="35" style="margin-right:6px; vertical-align:middle;">
-      </a>
-      <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
-        <img src="https://i.ibb.co/qF1p927w/Frame.png" alt="Instagram" width="35" style="vertical-align:middle;">
-      </a>
-    </td>
-  </tr>
-
-  <!-- Awards / Logos (2 per row) -->
-  <tr>
-    <td style="padding-top:15px;">
-      <table cellpadding="0" cellspacing="0" border="0" width="100%">
-        <tr>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" width="100%" style="display:block;">
-          </td>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/fYbzjxps/Current-signature-N-Pawa-Hallinans-Nov-2025.jpg" alt="Chambers & Partners NP" width="100%" style="display:block; margin:0 auto;">
-          </td>
-        </tr>
-        <tr>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
-          </td>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/8kfr39G/Legal-500-UK-Leading-firm-2026.png" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Email5 Signature - Team Member</title> </head> <body style="font-family: Arial, Helvetica, sans-serif;"> <table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:800px; background-color:rgb(240 242 244); margin:50px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);"> <!-- <tr> <td style="padding:10px 0;"> <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="200" style="display:block;"> </td> </tr> <tr> <td style="padding-top:10px; font-size:20px; font-weight:bold; color:#233e6f;">Maya Kendrick</td> </tr> <tr> <td style="font-size:16px; color:#233e6f; padding:6px 0;">Legal Assistant</td> </tr> --> <tr> <!-- Left: Name & Title --> <td style="width:70%; vertical-align:middle;"> <div style="padding-left:20px;"> <div style="font-size:16px; font-weight:bold; color:#233e6f;">Maya Kendrick</div> <div style="font-size:13px; color:#233e6f;">Legal Assistant</div> </div> </td> <!-- Right: Logo --> <td style="text-align:right; vertical-align:middle; padding-right:20px;"> <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="140" style="display:block;"> </td> </tr> <!-- Divider Line --> <tr> <td colspan="2"> <hr style="border:none; border-top:1px solid #e1e1d0; margin-top:10px;"> </td> </tr> <!-- Contact Table --> <tr> <td> <table border="0" cellpadding="4" cellspacing="0"> <!-- Emails --> <tr> <td valign="center"> <img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" alt="" width=""> </td> <td style="font-size:16px; font-weight:500; color:#233e6f;"> <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none; padding-right: 10px;"> areesha@hallinans.co.uk </a> | <a href="mailto:areesha@cjsm.net" style="color:#233e6f; text-decoration:none; padding-left: 10px;"> areesha@cjsm.net </a> </td> </tr> <!-- Office + Emergency --> <tr> <td valign="center"> <img src="https://i.ibb.co/gF7YFKhv/Group-1.png" alt="" width=""> </td> <td style="font-size:16px; font-weight:500; color:#233e6f;"> <strong>Office:</strong> <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a> &nbsp; | &nbsp; <strong>Emergency:</strong> <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a> </td> </tr> <!-- Website --> <tr> <td valign="center"> <img src="https://i.ibb.co/cmTvh8K/Frame-2.png" alt="" width=""> </td> <td style="font-size:16px; font-weight:500;"> <a href="https://www.hallinans.co.uk" style="color:#233e6f; text-decoration:none;"> www.hallinans.co.uk </a> </td> </tr> <!-- Office Address --> <tr> <td valign="top"> <img src="https://i.ibb.co/G3JzsZNs/Frame-9.png" alt="" width=""> </td> <td style="font-size:16px; font-weight:500; color:#233e6f; line-height:20px;"> <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" target="_blank" style="color:#233e6f; text-decoration:none;"> Alexandra House, 55A Catherine Place, London SW1E 6DY </a> </td> </tr> </table> </td> </tr> <!-- Social Icons --> <tr> <td style="padding:15px 0 30px; "> <a target="_blank" href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;"> <img src="https://i.ibb.co/0VJsQ4Ld/Frame-2.png" alt="LinkedIn" style="margin-right:6px; vertical-align:middle;"> </a> <a target="_blank" href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;"> <img src="https://i.ibb.co/dJpd6sSH/Frame-1.png" alt="Facebook" style="margin-right:6px; vertical-align:middle;"> </a> <a target="_blank" href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;"> <img src="https://i.ibb.co/qF1p927w/Frame.png" alt="Instagram" style="vertical-align:middle;"> </a> </td> </tr> <!-- Disclaimer --> <tr> <td style="padding-top:15px; font-size:14px; color:#233e6f; line-height:20px; border-top:1px solid #e0e0e0;"> HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. Authorised and regulated by the SRA under number 833036. <br><br> This transmission is intended only for the addressee and may concern confidential information or information which is privileged from disclosure. If this transmission is not addressed to you (or you are not authorised to receive it on behalf of the intended recipient), then you may not copy, disseminate or distribute its content. Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' websites. Any legal liability in respect of this e-mail and any attachment is limited to the lay client for whom it was prepared and to the particular case concerned. Any unauthorised use of such a document is prohibited. <br><br> <span style="color:#7A9A01;">Please consider the impact on the environment before printing this e-mail.</span> </td> </tr> <!-- Logos --> <tr> <td style="padding-top:15px;"> <table cellpadding="0" cellspacing="0" border="0" width="100%"> <tr> <td align="center" width="25%" style="padding:10px;"> <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" width="100%" style="display:block;"> </td> <!-- <td align="center" width="25%" style="padding:10px;"> <img src="https://i.ibb.co/fYbzjxps/Current-signature-N-Pawa-Hallinans-Nov-2025.jpg" alt="Chambers & Partners NP" width="100%" style="display:block; margin:0 auto;"> </td> --> <td align="center" width="25%" style="padding:10px;"> <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;"> </td> <td align="center" width="25%" style="padding:10px;"> <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;"> </td> <td align="center" width="25%" style="padding:10px;"> <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" width="100%" style="display:block; margin:0 auto;"> </td> </tr> </table> </td> </tr> </table> </body> </html>
