--- a/file6.html
+++ b/file6.html
@@ -7,154 +7,150 @@
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif; margin:0; padding:0;">
 
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:800px; background-color:#233e6f; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#233e6f; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 
-  <!-- Logo -->
+  <!-- Header: Name + Title + Logo -->
   <tr>
-    <td align="left" style="padding-bottom:10px;">
-      <div style="background-color:#fff; padding:18px; width:fit-content; border-radius:10px; border:1px solid #e8cf6e;">
-        <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="100%" style="display:block; max-width:300px;">
-      </div>
+    <td style="width:75%; vertical-align:middle; color:#fff;">
+      <div style="font-size:20px; font-weight:bold;">Namita Pawa</div>
+      <div style="font-size:15px; color:#fff; margin-top:2px;">Partner</div>
+    </td>
+    <td style="text-align:right; vertical-align:middle; background-color: #fff; padding: 10px; border-radius: 10px;">
+      <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" style="display:block;">
     </td>
   </tr>
 
-  <!-- Name & Title -->
+  <!-- Divider -->
   <tr>
-    <td style="font-size:20px; font-weight:bold; color:#fff; padding-top: 12px;">Namita Pawa</td>
-  </tr>
-  <tr>
-    <td style="font-size:16px; color:#fff; padding:8px 0;">Partner</td>
+    <td colspan="2" style="padding:10px 0;">
+      <hr style="border:none; border-top:1px solid #e8cf6e; margin:0;">
+    </td>
   </tr>
 
-  <!-- Contact Info -->
+  <!-- Contact Info (smaller font + smaller icons) -->
   <tr>
-    <td style="font-size:18px; color:#FFF; padding-top: 12px;">
-        <table border="0" cellpadding="4" cellspacing="0">
+    <td colspan="2" style="padding-top:5px;">
+      <table border="0" cellpadding="5" cellspacing="0" style="font-size:14px; color:#fff; width:100%;">
 
-        <!-- Office + Emergency in one line -->
+        <!-- Office + Emergency -->
         <tr>
-            <td valign="middle" width="40">
-            <img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Office Phone">
-            </td>
-            <td>
+          <td width="28" valign="middle">
+            <img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Phone" width="22">
+          </td>
+          <td>
             <strong>Office:</strong> 
-            <a href="tel:02078288253" style="color:#FFF; text-decoration:none;">0207 828 8253</a>
+            <a href="tel:02078288253" style="color:#fff; text-decoration:none;">0207 828 8253</a>
             &nbsp; | &nbsp;
             <strong>Emergency:</strong> 
-            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
-            </td>
+            <a href="tel:07831406242" style="color:#fff; text-decoration:none;">07831 406242</a>
+          </td>
         </tr>
 
         <!-- Mobile -->
         <tr>
-            <td valign="middle" width="40">
-            <img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile">
-            </td>
-            <td>
+          <td width="28" valign="middle">
+            <img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile" width="22">
+          </td>
+          <td>
             <strong>Mobile:</strong> 
-            <a href="tel:07831406242" style="color:#FFF; text-decoration:none;">07831 406242</a>
-            </td>
+            <a href="tel:07831406242" style="color:#fff; text-decoration:none;">07831 406242</a>
+          </td>
         </tr>
 
         <!-- Website -->
         <tr>
-            <td valign="middle" width="40">
-            <img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website">
-            </td>
-            <td>
+          <td width="28" valign="middle">
+            <img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website" width="22">
+          </td>
+          <td>
             <strong>Website:</strong> 
-            <a href="https://www.hallinans.co.uk" style="color:#FFF; text-decoration:none;">www.hallinans.co.uk</a>
-            </td>
+            <a href="https://www.hallinans.co.uk" target="_blank" style="color:#fff; text-decoration:none;">www.hallinans.co.uk</a>
+          </td>
         </tr>
 
         <!-- Emails -->
         <tr>
-            <td valign="middle" width="40">
-            <img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email">
-            </td>
-            <td>
-            <strong>Secure email:</strong> 
-            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#FFF; text-decoration:none;">namita.pawa@hallinans.co.uk</a> 
+          <td width="28" valign="middle">
+            <img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email" width="22">
+          </td>
+          <td>
+            <strong>Email:</strong> 
+            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#fff; text-decoration:none;">namita.pawa@hallinans.co.uk</a>
             &nbsp; | &nbsp;
-            <a href="mailto:namita.pawa@cjsm.net" style="color:#FFF; text-decoration:none;">namita.pawa@cjsm.net</a>
-            </td>
+            <a href="mailto:namita.pawa@cjsm.net" style="color:#fff; text-decoration:none;">namita.pawa@cjsm.net</a>
+          </td>
         </tr>
 
         <!-- Address -->
         <tr>
-            <td valign="top">
-            <img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address">
-            </td>
-            <td>
-            <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" target="_blank" style="color:#FFF; text-decoration:none;">
-                Alexandra House, 55A Catherine Place, London SW1E 6DY
+          <td width="28" valign="top">
+            <img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address" width="22">
+          </td>
+          <td>
+            <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
+               target="_blank" style="color:#fff; text-decoration:none;">
+              Alexandra House, 55A Catherine Place, London SW1E 6DY
             </a>
-            </td>
+          </td>
         </tr>
-     </table>
+
+      </table>
     </td>
   </tr>
 
-  <!-- Social Icons -->
+  <!-- Social Links -->
   <tr>
-    <td style="color:#FFF; font-size:20px; font-weight:600; padding:10px 0 5px 0;">Social Links</td>
-  </tr>
-  <tr>
-    <td style="padding: 20px 0;">
-      <a target="_blank" href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" style="text-decoration:none;">
-        <img src="https://i.ibb.co/Zz1qzvQc/Frame-4.png" alt="LinkedIn" style="margin-right:6px; vertical-align:middle;">
+    <td colspan="2" style="padding:15px 0;">
+      <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" target="_blank" style="text-decoration:none;">
+        <img src="https://i.ibb.co/Zz1qzvQc/Frame-4.png" alt="LinkedIn" width="22" style="margin-right:8px; vertical-align:middle;">
       </a>
-      <a target="_blank" href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" style="text-decoration:none;">
-        <img src="https://i.ibb.co/hFDhY52h/Frame-5.png" alt="Facebook" style="margin-right:6px; vertical-align:middle;">
+      <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" target="_blank" style="text-decoration:none;">
+        <img src="https://i.ibb.co/hFDhY52h/Frame-5.png" alt="Facebook" width="22" style="margin-right:8px; vertical-align:middle;">
       </a>
-      <a target="_blank" href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" style="text-decoration:none;">
-        <img src="https://i.ibb.co/HLmtB0Tc/Frame-6.png" alt="Instagram" style="vertical-align:middle;">
+      <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" target="_blank" style="text-decoration:none;">
+        <img src="https://i.ibb.co/HLmtB0Tc/Frame-6.png" alt="Instagram" width="22" style="vertical-align:middle;">
       </a>
     </td>
   </tr>
- <!-- Disclaimer -->
+
+  <!-- Award Logos (3 columns, one Chambers logo only) -->
   <tr>
-    <td style="padding-top:15px; font-size:14px; color:#FFF; line-height:22px; border-top:1px solid #e8cf6e;">
-      HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
-      Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. 
-      Authorised and regulated by the SRA under number 833036.
-      <br><br>
-      This transmission is intended only for the addressee and may concern confidential information or information which is privileged from disclosure. 
-      If this transmission is not addressed to you (or you are not authorised to receive it on behalf of the intended recipient), 
-      then you may not copy, disseminate or distribute its content. 
-      Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' websites. 
-      Any legal liability in respect of this e-mail and any attachment is limited to the lay client for whom it was prepared and to the particular case concerned. 
-      Any unauthorised use of such a document is prohibited.
-      <br><br>
-      <span style="color:#7A9A01;">Please consider the impact on the environment before printing this e-mail.</span>
-    </td>
-  </tr>
-  <!-- Logos -->
-  <tr>
-    <td style="padding-top:15px;">
-      <table cellpadding="0" cellspacing="0" border="0" width="100%">
+    <td colspan="2" style="padding-top:10px; border-top:1px solid #e8cf6e;">
+      <table width="100%" cellpadding="0" cellspacing="0" style="text-align:center;">
         <tr>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" width="100%" style="display:block;">
+          <td style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" style="width:100%; display:block; margin:0 auto;">
           </td>
-          <!-- <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/fYbzjxps/Current-signature-N-Pawa-Hallinans-Nov-2025.jpg" alt="Chambers & Partners NP" width="100%" style="display:block; margin:0 auto;">
-          </td> -->
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
+           <td style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/zWs8ZGV4/Pawa-Namita-4.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
           </td>
-        </tr>
-        <tr>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners Firm" width="100%" style="display:block; margin:0 auto;">
+          <td style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
           </td>
-          <td align="center" width="50%" style="padding:10px;">
-            <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" width="100%" style="display:block; margin:0 auto;">
+          <td style="width:25%; padding:10px;">
+            <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" style="width:100%; display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
     </td>
   </tr>
+
+  <!-- Disclaimer moved BELOW logos -->
+  <tr>
+    <td colspan="2" style="padding-top:15px; font-size:12px; color:#fff; line-height:20px;">
+      HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
+      Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. 
+      Authorised and regulated by the SRA under number 833036.
+      <br><br>
+      This transmission is intended only for the addressee and may concern confidential or privileged information. 
+      If you are not the intended recipient, you may not copy, disseminate or distribute its content. 
+      Consent is not given for the use of this e-mail or any attachment on other solicitors' or barristers' websites. 
+      Any legal liability is limited to the lay client for whom it was prepared. 
+      <br><br>
+      <span style="color:#7A9A01;">Please consider the impact on the environment before printing this e-mail.</span>
+    </td>
+  </tr>
+
 </table>
 
 </body>
