--- a/file6.html
+++ b/file6.html
@@ -5,18 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Email Signature - Namita Pawa</title>
 </head>
-<body style="font-family: Arial, Helvetica, sans-serif; margin:0; padding:0;">
+<body style="font-family: Arial, Helvetica, sans-serif;">
 
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#233e6f; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#fff; margin:40px auto; padding:20px; border-radius:20px; border:2px solid #e8cf6e; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 
   <!-- Header: Name + Title + Logo -->
   <tr>
-    <td style="width:75%; vertical-align:middle; color:#fff;">
+    <td style="width:75%; vertical-align:middle; color:#233e6f;">
       <div style="font-size:20px; font-weight:bold;">Namita Pawa</div>
-      <div style="font-size:15px; color:#fff; margin-top:2px;">Partner</div>
+      <div style="font-size:15px; color:#233e6f; margin-top:2px;">Partner</div>
     </td>
-    <td style="text-align:right; vertical-align:middle; background-color: #fff; padding: 10px; border-radius: 10px;">
-      <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" style="display:block;">
+    <td style="text-align:right; vertical-align:middle; padding: 10px; border-radius: 10px;">
+      <img src="https://i.ibb.co/39cvG5N7/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="150" style="display:block;">
     </td>
   </tr>
 
@@ -30,65 +30,65 @@
   <!-- Contact Info (smaller font + smaller icons) -->
   <tr>
     <td colspan="2" style="padding-top:5px;">
-      <table border="0" cellpadding="5" cellspacing="0" style="font-size:14px; color:#fff; width:100%;">
+      <table border="0" cellpadding="5" cellspacing="0" style="font-size:14px; color:#233e6f; width:100%;">
 
         <!-- Office + Emergency -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/QFrrhBbW/Group-2.png" alt="Phone" width="22">
+            <img src="https://i.ibb.co/QFBbB5KZ/Frame-1.png" alt="Phone" width="22">
           </td>
           <td>
             <strong>Office:</strong> 
-            <a href="tel:02078288253" style="color:#fff; text-decoration:none;">0207 828 8253</a>
+            <a href="tel:02078288253" style="color:#233e6f; text-decoration:none;">0207 828 8253</a>
             &nbsp; | &nbsp;
             <strong>Emergency:</strong> 
-            <a href="tel:07831406242" style="color:#fff; text-decoration:none;">07831 406242</a>
+            <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
           </td>
         </tr>
 
         <!-- Mobile -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/R42pD34g/Frame-8.png" alt="Mobile" width="22">
+            <img src="https://i.ibb.co/HTK9ytYV/Frame-14.png" alt="Mobile" width="22">
           </td>
           <td>
             <strong>Mobile:</strong> 
-            <a href="tel:07831406242" style="color:#fff; text-decoration:none;">07831 406242</a>
+            <a href="tel:07831406242" style="color:#233e6f; text-decoration:none;">07831 406242</a>
           </td>
         </tr>
 
         <!-- Website -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/mV31xyjY/Frame-3.png" alt="Website" width="22">
+            <img src="https://i.ibb.co/xSKyyTzm/Frame-11.png" alt="Website" width="22">
           </td>
           <td>
             <strong>Website:</strong> 
-            <a href="https://www.hallinans.co.uk" target="_blank" style="color:#fff; text-decoration:none;">www.hallinans.co.uk</a>
+            <a href="https://www.hallinans.co.uk" target="_blank" style="color:#233e6f; text-decoration:none;">www.hallinans.co.uk</a>
           </td>
         </tr>
 
         <!-- Emails -->
         <tr>
           <td width="28" valign="middle">
-            <img src="https://i.ibb.co/cKSVSz26/Group-3.png" alt="Email" width="22">
+            <img src="https://i.ibb.co/C3zV7RZs/Group-3-1.png" alt="Email" width="22">
           </td>
           <td>
             <strong>Email:</strong> 
-            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#fff; text-decoration:none;">namita.pawa@hallinans.co.uk</a>
+            <a href="mailto:namita.pawa@hallinans.co.uk" style="color:#233e6f; text-decoration:none;">namita.pawa@hallinans.co.uk</a>
             &nbsp; | &nbsp;
-            <a href="mailto:namita.pawa@cjsm.net" style="color:#fff; text-decoration:none;">namita.pawa@cjsm.net</a>
+            <a href="mailto:namita.pawa@cjsm.net" style="color:#233e6f; text-decoration:none;">namita.pawa@cjsm.net</a>
           </td>
         </tr>
 
         <!-- Address -->
         <tr>
           <td width="28" valign="top">
-            <img src="https://i.ibb.co/S4PnQKsd/Frame-10.png" alt="Address" width="22">
+            <img src="https://i.ibb.co/pjDJk0CQ/Frame-19.png" alt="Address" width="22">
           </td>
           <td>
             <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
-               target="_blank" style="color:#fff; text-decoration:none;">
+               target="_blank" style="color:#233e6f; text-decoration:none;">
               Alexandra House, 55A Catherine Place, London SW1E 6DY
             </a>
           </td>
@@ -98,17 +98,17 @@
     </td>
   </tr>
 
-  <!-- Social Links -->
+  <!-- Social Icons -->
   <tr>
-    <td colspan="2" style="padding:15px 0;">
+    <td colspan="2" style="padding:15px 15px 25px; ">
       <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/Zz1qzvQc/Frame-4.png" alt="LinkedIn" width="22" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://i.ibb.co/k667NDmz/Frame-12.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/hFDhY52h/Frame-5.png" alt="Facebook" width="22" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://i.ibb.co/QFY5Kx3R/Frame-15.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/HLmtB0Tc/Frame-6.png" alt="Instagram" width="22" style="vertical-align:middle;">
+        <img src="https://i.ibb.co/p6mtMHj5/Frame-16.png" alt="Instagram" width="26" style="vertical-align:middle;">
       </a>
     </td>
   </tr>
@@ -119,16 +119,16 @@
       <table width="100%" cellpadding="0" cellspacing="0" style="text-align:center;">
         <tr>
           <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" style="width:100%; display:block; margin:0 auto;">
+            <img src="https://i.ibb.co/dwXWLt0K/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times" style="width:100%; display:block; margin:0 auto;">
           </td>
            <td style="width:25%; padding:10px;">
             <img src="https://i.ibb.co/zWs8ZGV4/Pawa-Namita-4.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
           </td>
           <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
+            <img src="https://i.ibb.co/tTW6xrxG/Firm-Logo-1.jpg" alt="Chambers & Partners - Namita Pawa" style="width:100%; display:block; margin:0 auto;">
           </td>
           <td style="width:25%; padding:10px;">
-            <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" style="width:100%; display:block; margin:0 auto;">
+            <img src="https://i.ibb.co/23hSz89W/UK-Leading-firm-2026-272x300.webp" alt="Legal 500" style="width:100%; display:block; margin:0 auto;">
           </td>
         </tr>
       </table>
@@ -137,7 +137,7 @@
 
   <!-- Disclaimer moved BELOW logos -->
   <tr>
-    <td colspan="2" style="padding-top:15px; font-size:12px; color:#fff; line-height:20px;">
+    <td colspan="2" style="padding-top:15px; font-size:12px; color:#233e6f; line-height:20px;">
       HBG&N Ltd t/a Hallinan Blackburn Gittings & Nott is registered in England and Wales under number 13661170. 
       Registered Office: Alexandra House, 55A Catherine Place, London, SW1E 6DY. 
       Authorised and regulated by the SRA under number 833036.
