--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Email Signature - Hallinans</title>
 </head>
-<body style="margin:0; padding:0; font-family:Arial, Helvetica, sans-serif;">
+<body style=" font-family:Arial, Helvetica, sans-serif;">
 
-<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#f0f2f4; margin:40px auto; padding:25px; border-radius:15px; border:2px solid #e8cf6e;">
+<table border="0" cellpadding="0" cellspacing="0" style="width:100%; max-width:600px; background-color:#ffff; margin:40px auto; padding:25px; border-radius:15px; border:2px solid #e8cf6e;">
   
   <!-- Header -->
   <tr>
@@ -18,7 +18,7 @@
       </div>
     </td>
     <td style="text-align:right; vertical-align:middle; padding-right:15px;">
-      <img src="https://i.ibb.co/PvK2tS9x/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="160" style="display:block;">
+      <img src="https://i.ibb.co/39cvG5N7/Hallinans-logo-Blue.png" alt="Hallinans Logo" width="160" style="display:block;">
     </td>
   </tr>
 
@@ -37,7 +37,7 @@
         <!-- Email -->
         <tr>
           <td width="20" valign="middle">
-            <img src="https://i.ibb.co/FqVZQdgx/Group-1-3.png" width="20" alt="Email">
+            <img src="https://i.ibb.co/C3zV7RZs/Group-3-1.png" width="20" alt="Email">
           </td>
           <td>
             <a href="mailto:areesha@hallinans.co.uk" style="color:#233e6f; text-decoration:none;">areesha@hallinans.co.uk</a>
@@ -49,7 +49,7 @@
         <!-- Phone -->
         <tr>
           <td width="20" valign="middle">
-            <img src="https://i.ibb.co/gF7YFKhv/Group-1.png" width="20" alt="Phone">
+            <img src="https://i.ibb.co/QFBbB5KZ/Frame-1.png" width="20" alt="Phone">
           </td>
           <td>
             <strong>Office:</strong> 
@@ -63,7 +63,7 @@
         <!-- Website -->
         <tr>
           <td width="20" valign="middle">
-            <img src="https://i.ibb.co/cmTvh8K/Frame-2.png" width="20" alt="Website">
+            <img src="https://i.ibb.co/xSKyyTzm/Frame-11.png" width="20" alt="Website">
           </td>
           <td>
             <a href="https://www.hallinans.co.uk" target="_blank" style="color:#233e6f; text-decoration:none;">www.hallinans.co.uk</a>
@@ -73,7 +73,7 @@
         <!-- Address -->
         <tr>
           <td width="20" valign="top">
-            <img src="https://i.ibb.co/G3JzsZNs/Frame-9.png" width="20" alt="Address">
+            <img src="https://i.ibb.co/pjDJk0CQ/Frame-19.png" width="20" alt="Address">
           </td>
           <td>
             <a href="https://www.google.com/maps?q=Alexandra+House,+55A+Catherine+Place,+London+SW1E+6DY" 
@@ -90,13 +90,13 @@
   <tr>
     <td colspan="2" style="padding:15px 15px 25px; ">
       <a href="https://uk.linkedin.com/company/hallinan-blackburn-gittings-nott-llp" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/0VJsQ4Ld/Frame-2.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://i.ibb.co/k667NDmz/Frame-12.png" alt="LinkedIn" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.facebook.com/p/Hallinan-Blackburn-Gittings-Nott-61554381287448/" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/dJpd6sSH/Frame-1.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
+        <img src="https://i.ibb.co/QFY5Kx3R/Frame-15.png" alt="Facebook" width="26" style="margin-right:8px; vertical-align:middle;">
       </a>
       <a href="https://www.instagram.com/hallinanscriminaldefence/?hl=en" target="_blank" style="text-decoration:none;">
-        <img src="https://i.ibb.co/qF1p927w/Frame.png" alt="Instagram" width="26" style="vertical-align:middle;">
+        <img src="https://i.ibb.co/p6mtMHj5/Frame-16.png" alt="Instagram" width="26" style="vertical-align:middle;">
       </a>
     </td>
   </tr>
@@ -108,13 +108,13 @@
     <table width="100%" cellpadding="0" cellspacing="0" style="text-align:center;">
       <tr>
         <td style="width:33.3%; padding:10px;">
-          <img src="https://i.ibb.co/CppJ7nSn/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+          <img src="https://i.ibb.co/dwXWLt0K/The-Times-BLF2026-Logo-Standard.jpg" alt="The Times Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
         </td>
         <td style="width:33.3%; padding:10px;">
-          <img src="https://i.ibb.co/7Jf3m6tB/Firm-Logo-1.jpg" alt="Chambers Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+          <img src="https://i.ibb.co/tTW6xrxG/Firm-Logo-1.jpg" alt="Chambers Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
         </td>
         <td style="width:33.3%; padding:10px;">
-          <img src="https://i.ibb.co/7th7SPPV/UK-Leading-firm-2026-272x300.webp" alt="Legal 500 Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
+          <img src="https://i.ibb.co/23hSz89W/UK-Leading-firm-2026-272x300.webp" alt="Legal 500 Award" style="width:100%; max-width:160px; height:auto; display:block; margin:0 auto;">
         </td>
       </tr>
     </table>
